update api for lead status methods
